gobmkida/g1/report_dragon
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/report_dragon/src/engine/dragon.c:2772:23: error: use of undeclared identifier 'off_48D10E'
v10 = ( const char *)&off_48D10E; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/report_dragon/src/engine/dragon.c:2774:23: error: use of undeclared identifier 'unk_48D112'
v10 = ( const char *)&unk_48D112; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/report_dragon/src/engine/dragon.c:2778:23: error: use of undeclared identifier 'off_48D10E'
v11 = ( const char *)&off_48D10E; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/report_dragon/src/engine/dragon.c:2780:23: error: use of undeclared identifier 'unk_48D112'
v11 = ( const char *)&unk_48D112; 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/report_dragon/src/obj/1/dragon.o] Error 1
